refactor(video): replace local video assets with external CDN links
- Remove local video and font assets from dist and public directories
- Update video source URLs to use Gumlet CDN in HeroSection and VideoPinSection
- Clean up unused image assets and update preload hints in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Resource Hints for Performance -->
     <link rel="preconnect" href="https://images.pexels.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preload" href="/videos/Video.mp4" as="video">
+    <link rel="preconnect" href="https://play.gumlet.io">
     <link rel="preload" href="/images/your-logo.png" as="image">
     <link rel="preload" href="/font/AcademyEngravedLetPlain.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/font/Barlow-Medium.ttf" as="font" type="font/ttf" crossorigin>
